# sketches

./: README.md
01_helloWorld/: CMakeLists.txt  happyNewYear.cpp  helloSwitch.cpp  helloWorld.cpp
02_helloPeople/: CMakeLists.txt  helloPeople.cpp
03_class/: CMakeLists.txt  classMain.cpp  shape.cpp  shape.h
04_inheritance/: CMakeLists.txt  circle.h  inheritanceMain.cpp  shape.h  square.h  triangle.h
05_boostVectors/: CMakeLists.txt  boostVectors.cpp
06_floatVsDouble/: CMakeLists.txt  compareDoubleFloat.cpp
07_openGLQt/: CMakeLists.txt  bargraph.cpp  bargraph.h  glwidget.cpp  glwidget.h  main.cpp  window.cpp  window.h
08_intPointers/: CMakeLists.txt  intPointers.cpp
09_mainArgs/: CMakeLists.txt  main.cpp
10_keyboardCodes/: CMakeLists.txt  arrowKeys.cpp
11_eigenLib/: CMakeLists.txt  eigenLib.cpp  eigenState.cpp  least_squares.cpp  transform.cpp
12_beep/: beepMain.cpp
13_pipes/: CMakeLists.txt  commConstants.h  pipeClient.cpp  pipeServer.cpp
14_openCV/: CMakeLists.txt  helloWorldOpenCv.cpp  histogramsMain.cpp  matMainOpenCV2.cpp  networkCameraCapture.cpp  webcam_capture.cpp
15_doxygen/: CMakeLists.txt  class.cpp  class.h  classMain.cpp  doxygenConfig.txt
16_math/: CMakeLists.txt  helloMath.cpp
17_wxwidgetsHelloWorld/: CMakeLists.txt  hworld.cpp
18_serialComms/: CMakeLists.txt  asterx1_gps.cpp  asterx1_gps.h  teleOpMain.cpp
19_strings/: CMakeLists.txt  stringTest.cpp
20_glut/: CMakeLists.txt  openGLglut.cpp
21_yarpExample/: CMakeLists.txt  client.cpp  publisher.cpp  server.cpp  subscriber.cpp  subscriberCallback.cpp
22_returnObject/: CMakeLists.txt  returnObjectMain.cpp
23_rosFuerteExample/myTests/: stack.xml
23_rosFuerteExample/myTests/tfListener/: CMakeLists.txt  mainpage.dox  manifest.xml
23_rosFuerteExample/myTests/tfListener/src/: tfListenerNode.cpp
24_functionHeader/: CMakeLists.txt  myFunctions.cpp  myFunctions.h  myMain1.cpp  myMain2.cpp
25_STLvectors/: CMakeLists.txt  removeElementByCondition.cpp  stlVectors.cpp
26_sstream/: CMakeLists.txt  sstream.cpp
27_offLineYarpPublisher/: CMakeLists.txt  main_test.cpp  offLinePublisher.cpp  offLinePublisher.h
27_offLineYarpPublisher/logFiles/: fileList.txt  file_0.txt  file_1.txt
28_forLoop/: CMakeLists.txt  forLoop.cpp
29_matrixFileParser/: CMakeLists.txt  counterMatrix.cpp  counterMatrix.h  mainTest.cpp
29_matrixFileParser/data/: dataFile  dataFile.txt
30_dlib/: CMakeLists.txt  example1.cpp  least_squares_ex.cpp  least_squares_ex_class.cpp  optimization_ex.cpp  optimization_ex_old.cpp  results_32_64_bits.txt
31_template_class/: CMakeLists.txt  main.cpp  stack.h
32_alsa/: CMakeLists.txt  alsaCountWvFm.cpp  alsaList.cpp  alsaMain.cpp
33_rtMidi/: CMakeLists.txt  midiout.cpp  midiprobe.cpp
34_oscpack/: CMakeLists.txt  OscDump.cpp  SimpleReceive.cpp
35_boostGraphLib/: CMakeLists.txt  boostGraphLib.cpp
36_mathGL/: CMakeLists.txt  mgl1.cpp
37_fileIO/: CMakeLists.txt  dataFile.txt  fileInput.cpp
38_openFrameworks/: CMakeLists.txt  FindopenFrameworks.cmake  README.txt
38_openFrameworks/src/: CMakeLists.txt  main.cpp  testApp.cpp
39_STLcontainers/: CMakeLists.txt  stl_containers.cpp
40_ceres/: CMakeLists.txt
40_ceres/src/: angle_parameterization.cpp  camera_ext_calibration.cpp  direction2d_parameterization.cpp  hello_ceres.cpp  local_parameterization.cpp  main_jet.cpp  sphere_fitting.cpp
41_union/: CMakeLists.txt  union_main.cpp
42_threads_std/: CMakeLists.txt  async_sum.cpp  atomic_sum.cpp  icp_example.cpp  icp_example_class.cpp  threads_1.cpp
43_inClassTypedefs/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
45_sharedPtr/: CMakeLists.txt  shared_ptr.cpp  shared_ptr_2.cpp  shared_ptr_3.cpp
46_openmp/: CMakeLists.txt  simple_openmp.cpp
47_std_map/: CMakeLists.txt  std_map.cpp
48_structs/: CMakeLists.txt  struct.cpp
49_sockets_udp/: CMakeLists.txt  udp_receiver.cpp  udp_sender.cpp
