

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
FIND_PACKAGE(YARP)
INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})

ADD_EXECUTABLE(publisher publisher.cpp)
ADD_EXECUTABLE(subscriber subscriber.cpp)
# ADD_EXECUTABLE(subscriberCallback subscriberCallback.cpp)
# ADD_EXECUTABLE(server server.cpp)
# ADD_EXECUTABLE(client client.cpp)

TARGET_LINK_LIBRARIES(publisher ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(subscriber ${YARP_LIBRARIES})
# TARGET_LINK_LIBRARIES(subscriberCallback ${YARP_LIBRARIES})
# TARGET_LINK_LIBRARIES(server ${YARP_LIBRARIES})
# TARGET_LINK_LIBRARIES(client ${YARP_LIBRARIES})

