cmake_minimum_required(VERSION 2.6)

#compiler options
# SET(CMAKE_CXX_FLAGS "-std=c++0x")

# include_directories(/usr/include/)
# ADD_EXECUTABLE(least_squares_ex least_squares_ex.cpp)
# ADD_EXECUTABLE(least_squares_ex_class least_squares_ex_class.cpp)
ADD_EXECUTABLE(optimization_ex optimization_ex.cpp)
ADD_EXECUTABLE(example1 example1.cpp)

